# cpp-template-project

./: CMakeLists.txt  README.md
include/example/: example.hpp
src/: CMakeLists.txt  main.cpp
src/example/: example.cpp
test/: CMakeLists.txt
test/example/: test.cpp
